# killscript

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: client.yaml  server.yaml
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
client/: build.gradle.kts  rules.pro
client/src/main/kotlin/: Launcher.kt  Main.kt
client/src/main/kotlin/core/: APIClient.kt  KeyBoardListener.kt  ProcessHandler.kt  Updater.kt
client/src/main/kotlin/core/settings/: Settings.kt  Storage.kt
client/src/main/kotlin/theme/: DarkMode.kt  Theme.kt
client/src/main/kotlin/ui/: GTAKiller.kt  ServerSelector.kt  StatusScreen.kt
client/src/main/kotlin/ui/components/: DividerWithHeading.kt  Leaderboard.kt
client/src/main/kotlin/ui/components/settings/: AutoLaunchGtaSetting.kt  KeyboardInput.kt  Settings.kt  UserNameInput.kt  VersionSwitcher.kt
client/src/main/kotlin/util/: CoroutineUtil.kt  KeyMap.kt
client/src/main/resources/: logback.xml
common/: build.gradle.kts
common/src/main/kotlin/: Events.kt  Routes.kt  Status.kt  UserRequests.kt
gradle/: libs.versions.toml
server/: Dockerfile  build.gradle.kts
server/src/main/kotlin/: Authentication.kt  EventServer.kt  KillGTARoute.kt  Server.kt  Storage.kt  UserRoute.kt  WebSocket.kt
server/src/main/kotlin/util/: HashUtil.kt
windows_helper/: Cargo.toml  build.gradle.kts
windows_helper/src/: install_location.rs  keyboard_handler.rs  lib.rs  process_handler.rs
windows_helper/src/main/kotlin/: Extensions.kt  GTAVersion.kt
