[package]
name = "windows_helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
safer-ffi = "0.1.12"
windows-registry = "0.5.0"
mki = "0.2.3"
once_cell = "1.20.3"
runas = "1.2.0"

[[bin]]
name = "generate-headers"
required-features = ["headers"]


[features]
headers = ["safer-ffi/headers"]
